@@ -1,3 +1,12 @@
+2007-07-17  Adam Roben  <aroben@apple.com>
+
+        Initialize Settings::developerExtrasEnabled
+
+        Reviewed by Tim.
+
+        * WebView.cpp:
+        (WebView::updateWebCoreSettingsFromPreferences):
+
 2007-07-17  Geoffrey Garen  <ggaren@apple.com>
 
         Build fix. 
